# tuhh-codetrack

./: .gitignore  README.md
advanced-machine-learning/exercise-sheet-1/: exercise-1.py  exercise-3c.py  exercise-4.py  exercise-5.py
advanced-machine-learning/exercise-sheet-2/: exercise-3.py  exercise-4.py  exercise2_skel.py  exercise4_skel.py  feedforward.py  feedforward_skel.py
probabilistic-machine-learning/: pyproject.toml
probabilistic-machine-learning/final-exam/: presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc
probabilistic-machine-learning/lab-01/: lab01.ipynb  lab01_solution.ipynb
probabilistic-machine-learning/lab-02/: Lab2.ipynb  lab02_sol.ipynb
probabilistic-machine-learning/lab-03/: lab03.ipynb  lab03_sol.ipynb
probabilistic-machine-learning/lab-04/: archive_filelist.csv  dag.py  lab04.ipynb  lab04_sol.ipynb
probabilistic-machine-learning/lab-05/: hmm.py  lab05.ipynb  lab05_sol.ipynb
probabilistic-machine-learning/lab-06/: lab06.ipynb  lab06_sol.ipynb
probabilistic-machine-learning/lab-07/: lab07.ipynb  lab07_sol.ipynb
probabilistic-machine-learning/lab-08/: lab08.ipynb  lab08_sol.ipynb
probabilistic-machine-learning/lab-09/: data.txt  lab09.ipynb  lab09_sol.ipynb
probabilistic-machine-learning/lab-10/: data.txt  lab10.ipynb  lab10_sol.ipynb
probabilistic-machine-learning/lab-11/: lab11.ipynb  lab11_sol.ipynb
probabilistic-machine-learning/lab-12/: lab12.ipynb  lab12_sol.ipynb
probabilistic-machine-learning/lab-13/: lab13.ipynb  lab13_sol.ipynb
(+102 files in other folders)
