[project]
name = "probabilistic-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "arviz>=0.23.4",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pymc>=5.28.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
]
